--- a/Templates/base.html
+++ b/Templates/base.html
@@ -12,6 +12,7 @@
         <nav>
             <a href="{% url 'home' %}">홈</a> |
             <a href="{% url 'connect_db' %}">DB 연결</a> |
+            <a href="{% url 'view_table' %}">테이블 조회</a> |
             <a href="{% url 'select_table' %}">테이블 선택</a> |
             <a href="{% url 'analyze' %}">AI 분석 결과</a>
         </nav>
